test/classes/initializers/initequals/wrongArgCount.good
wrongArgCount.chpl:2: error: C.init= must have exactly one argument
wrongArgCount.chpl:6: error: C.init= must have exactly one argument
